examples/aws/Fargate/route_tables.tf
resource "aws_route_table" "ecs-ngw-rtb" {
    vpc_id = "aws_vpc.ecs-cluster.tf-cluster.id"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_nat_gateway.flaskapp-ngw.id
    }
}
